// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`historyCreateAction() - returns action created when history/address_bar chanages 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/info/foo",
        "payload": Object {
          "param": "foo",
        },
        "type": "INFO_PARAM",
      },
      "history": undefined,
      "kind": "pop",
      "prev": Object {
        "pathname": "/prev",
        "payload": Object {},
        "type": "PREV",
      },
    },
  },
  "payload": Object {
    "param": "foo",
  },
  "type": "INFO_PARAM",
}
`;

exports[`middlewareCreateAction() - [action not matched to any routePath] 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/not-found",
        "payload": Object {
          "someKey": "foo",
        },
        "type": "@@redux-first-router/NOT_FOUND",
      },
      "history": undefined,
      "kind": undefined,
      "prev": Object {
        "pathname": "/prev",
        "payload": Object {},
        "type": "PREV",
      },
    },
  },
  "payload": Object {
    "someKey": "foo",
  },
  "type": "@@redux-first-router/NOT_FOUND",
}
`;

exports[`middlewareCreateAction() - returns action created when middleware detects connected/matched action.type 1`] = `
Object {
  "meta": Object {
    "location": Object {
      "current": Object {
        "pathname": "/info/foo",
        "payload": Object {
          "param": "foo",
        },
        "type": "INFO_PARAM",
      },
      "history": undefined,
      "kind": "push",
      "prev": Object {
        "pathname": "/prev",
        "payload": Object {},
        "type": "PREV",
      },
    },
  },
  "payload": Object {
    "param": "foo",
  },
  "type": "INFO_PARAM",
}
`;
